tests/examples/bad/void_function_argument.lat
int main() {
    return 0;
}

int f(int a, void b) {
    return 0;
}